# pobox-detector

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/pobox_detector/: __init__.py  config.py  core.py  decision.py  models.py  normalize.py  regex_stage.py  smarty_stage.py
tests/: test_core.py  test_decision.py  test_normalize.py  test_regex_stage.py  test_smarty_stage.py
